force-app/main/default/objects/Booking__c/Booking__c.object-meta.xml
<CustomObject>
    <label>Booking</label>
    <pluralLabel>Bookings</pluralLabel>
    <nameField>
        <label>Booking Reference</label>
        <type>AutoNumber</type>
        <displayFormat>BK-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Vehicle booking records</description>
</CustomObject>