force-app/main/default/objects/Booking__c/fields/Booking_Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Booking_Customer_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
    <required>true</required>
</CustomField>