force-app/main/default/objects/Booking__c/fields/Booking_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Booking_Customer_Name__c</fullName>
    <label>Full Name</label>
    <type>Text</type>
    <length>50</length>
    <required>true</required>
</CustomField>