force-app/main/default/objects/Booking__c/fields/Booking_Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Booking_Customer_Phone__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
    <required>true</required>
</CustomField>