force-app/main/default/objects/Booking__c/fields/Booking_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Booking_Quantity__c</fullName>
    <label>Booked Quantity</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <required>true</required>
    <defaultValue>1</defaultValue>
    <description>Vehicles currently reserved by customer</description>
</CustomField>