force-app/main/default/objects/Booking__c/fields/Booking_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Booking_Vehicle__c</fullName>
    <label>Vehicle</label>
    <type>Lookup</type>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipName>Booking_Vehicle</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>